--- a/team.html
+++ b/team.html
@@ -103,7 +103,7 @@
     #sound{
       display: flex;
       justify-content: center;
-      margin-bottom: 20px;
+      padding-bottom: 20px;
     }
 
     </style>
