--- a/user.html
+++ b/user.html
@@ -90,7 +90,7 @@
 					<p>Le règlement intérieur doit être lu par tous les membres. Chaque tavernier se doit de respecter les différentes règles pour participer à la vie de l'association.<br>
 					<a href="reglement.docx" download="Reglement_interieur_Taverne">⇩ Règlement ⇩</a>
 					<h3>Les Statuts</h3>
-					<p>Dans ce document se trouvent les statuts de la taverne. On y retrouve les droits et devoirs de chaque membre.<br><a href="statuts.docx" download="Statuts_Taverne">⇩ Fiche d'emprunt de jeux ⇩</a></p>
+					<p>Dans ce document se trouvent les statuts de la taverne. On y retrouve les droits et devoirs de chaque membre.<br><a href="statuts.docx" download="Statuts_Taverne">⇩ Statuts ⇩</a></p>
 
 				</div>
 				<div class="invisible" id="admin">
