--- a/partenaire.html
+++ b/partenaire.html
@@ -143,7 +143,9 @@
 						<p>Vous pourrez également bénéficier de -10% à Majestik Games situé au 148 Avenue du Maine, 75014 Paris (<a href="https://www.majestikgames.com/fr/">majestikgames.com</a>), ainsi que de -10% chez Les Fous du Roy situé au 31 Rue du Général Leclerc, 78000 Versailles.</p>
 					</div>
 					<div id="starplayer">
-						<p></p>
+						<!-- IMAGE POINT PAVE + paragraphe -->
+						<img src="bonus.png" id="img_p">
+						<p>Avec la Taverne, améliorez vos notes ! En effet, plus vous vous investissez, plus on vous donnera de points. Chaque point donné ajoute 5 à votre note PAVE. <br>Cumulez les points avec d'autres associations. Au bout de 7 points, vous obtiendrez un bonus de 0.5 point sur votre matière avec la note la plus basse. Et avec 9 points, 1 point sera ajouté à une UE complète ! Ici aussi, celle dont la note est la plus basse.</p>
 					</div>
 					<div id="treso">
 						<img src="treso.jpg" />
