center iframe menu
Center iframe with the VDA

--- a/Taverne_accueil.html
+++ b/Taverne_accueil.html
@@ -97,6 +97,10 @@
 				border-radius : 20px;
 				text-align: center;
 			}
+			iframe {
+				display: block;
+				margin: auto;
+			}
 
 		</style>
 	</head>
