remove queue on iframe
put 'queue-enable=false' to avoid lecture of videos after the VDA on the iframe of the menu

--- a/Taverne_accueil.html
+++ b/Taverne_accueil.html
@@ -140,7 +140,7 @@
 					<!-- A new release on chrome will soon block this feature (only cookies for "samesite" attribute1)
 						We add a video in format mp4 at beginning but it's too heavy for github, even in a .zip
 						We tried through youtube but we didn't succeed so we finally choose dailymotion-->
-					<iframe frameborder="0" width="640" height="360" src="https://www.dailymotion.com/embed/video/k1qNr8Lzrnd2cIw6Bw9?autoplay=1" allowfullscreen="" allow="autoplay"></iframe>				
+					<iframe frameborder="0" width="640" height="360" src="https://www.dailymotion.com/embed/video/k1qNr8Lzrnd2cIw6Bw9?autoplay=1&queue-enable=false" allowfullscreen="" allow="autoplay"></iframe>				
 				</div>
 				<h2 id="pré_title">La Taverne du Troll c'est quoi ?</h2>
 				<div class="présentation">
