remove comm from dom

--- a/taverne.html
+++ b/taverne.html
@@ -165,7 +165,7 @@
 </div>
 <figure  id="image1" class="projectsvg">
 <svg  version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 1536 2048" preserveAspectRatio="xMinYMin meet">
-    //set your background image
+    <!--//set your background image-->
 <image  width="1536" height="2048" xlink:href="armoire.jpg"></image>
 	<polygon class="hover_group" points="653,1622,740,1615,738,1592,728,1554,779,1542,742,1473,671,1485,681,1537,636,1543,632,1579,647,1614" opacity="0"  target="_self" alt="UNO" onclick="infoFromAPI(this)"/>
     <polygon class="hover_group"  points="607,1536,619,1558,618,1620,292,1677,294,1603,291,1572,486,1542,488,1552" opacity="0" target="_self" alt="Tokaido" onclick="infoFromAPI(this)"/>
@@ -232,7 +232,7 @@
 
 <figure  class="invisible" class="projectsvg" id="image2">	
 <svg  version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 2048 1536" preserveAspectRatio="xMinYMin meet">
-    //set your background image
+    <!--set your background image-->
 <image  width="2048" height="1536" xlink:href="armoire2.jpg"></image>
 <polygon class="hover_group" target="_self" opacity="0" alt="Perudo" onclick="infoFromAPI(this)" points="37,1324,405,1304,479,1303,494,840,436,784,87,789"/>
     <polygon class="hover_group" target="_self" opacity="0" alt="Lâche pas la Savonnette" onclick="infoFromAPI(this)" points="478,1281,787,1266,792,825,494,833"/>
@@ -250,7 +250,7 @@
 
 <figure  class="invisible" class="projectsvg" id="image3">	
 <svg  version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 1560 1170" preserveAspectRatio="xMinYMin meet">
-    //set your background image
+    <!--//set your background image-->
 <image width="1560" height="1170" xlink:href="armoire3.jpg"></image>
 <polygon class="hover_group" opacity="0" target="_self" alt="Catan" onclick="infoFromAPI(this)" points="535,927,496,897,551,628,832,633,820,933"/>
     <polygon class="hover_group" opacity="0" target="_self" alt="BANG!" onclick="infoFromAPI(this)" points="829,880,842,897,875,901,911,897,930,875,937,828,940,740,929,703,923,648,915,610,893,586,873,592,851,599,842,616,838,649,827,747"/>
@@ -275,7 +275,7 @@
 
 <figure  class="invisible" class="projectsvg" id="image4">	
 <svg  version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 1072 1920" preserveAspectRatio="xMinYMin meet">
-    //set your background image
+  <!--  //set your background image-->
 <image width="1072" height="1920" xlink:href="armoire4.jpg"></image>
  <polygon class="hover_group" opacity="0" target="_self" alt="The Binding of Isaac Four Souls: Kickstarter Expansion Pack" onclick="infoFromAPI(this)" points="83,1105,298,1077,312,1250,165,1276,144,1100,83,1101,82,1055,88,831,88,833,266,829,88,834,88,831,270,828,264,764,154,772,147,834,88,834"/>
     <polygon class="hover_group" opacity="0" target="_self" alt="Citadelles" onclick="infoFromAPI(this)" points="80,1102,298,1078,294,1032,272,826,88,834,72,1051"/>
