--- a/Taverne_accueil.html
+++ b/Taverne_accueil.html
@@ -9,98 +9,97 @@
 		<link rel="stylesheet" type="text/css" href="mystyle.css">
 		
 		<style type="text/css">
-			.concept h2{
-				font-size: 4vw;
-				text-align: center;
-			}
-			.concept p{
-				font-size: 2.5vw;
-				padding-left: 5px;
-				padding-top: 10px;
-				text-align: center;
-			}
+.concept h2{
+                font-size: 4vw;
+                text-align: center;
+            }
+            .concept p{
+                font-size: 2.5vw;
+                padding-left: 5px;
+                padding-top: 10px;
+                text-align: center;
+            }
 
-			.concept{
-				margin-top: 3vw; 
-				display: flex;
-				flex-direction: column;
-				align-content: center;
-			}
-			.concept video{
-				align-self: center;
-				margin-top: 20px; 
-			}
+            .concept{
+                margin-top: 3vw; 
+                display: flex;
+                flex-direction: column;
+                align-content: center;
+            }
+            .concept video{
+                align-self: center;
+                margin-top: 20px; 
+            }
 
-			.location{
-				display: flex;
-				flex-direction: column;
-			}
+            .location{
+                display: flex;
+                flex-direction: column;
+            }
 
-			.location h2{
-				padding-top: 2vw; 
-				font-size: 3vw;
-				padding-left: 3%;
-			}
-			.location p{
-				font-size: 2.5vw;
-				padding-left: 1%;
-				padding-top: 10px;
-				padding-right: 1%;
-			  
-			}
-			.location img{
-				padding-left: 28%;
-				width: 70%;
-				height: auto;
-				padding-top: 20px;
-				padding-bottom: 20px;
-			}
+            .location h2{
+                padding-top: 2vw; 
+                font-size: 3vw;
+                padding-left: 3%;
+            }
+            .location p{
+                font-size: 2.5vw;
+                padding-left: 1%;
+                padding-top: 10px;
+                padding-right: 1%;
 
-			.présentation{
-				margin-top: 30px;
-				display: flex;
-				justify-content: space-around;
-			}
+            }
+            .location img{
+                padding-left: 28%;
+                width: 70%;
+                height: auto;
+                padding-top: 20px;
+                padding-bottom: 20px;
+            }
 
-			.présentation img{
-				width: 8vw;
-				height: auto;
-				align-self: center;
-			}
-			.présentation p{
-				font-size: 2vw;
-				max-width: 12vw;
-				text-align: center;
-			}
+            .présentation{
+                margin-top: 30px;
+                display: flex;
+                justify-content: space-around;
+            }
 
-			.présentation div{
-				display: flex;
-				flex-direction: column;
-			}
-			#pré_title{
-				padding-top: 2vw; 
-				font-size: 3vw;
-				padding-left: 3%;
-			}
-			.connection {
-				margin-right: 10px;
-				margin-top: 1vw;
-				height: 5vw;
-			}
-			.connection input {
-				height: 30px;
-  				width: 150px;
-  				font-size: 1em;
-  				-webkit-border-radius: 20px;
-				-moz-border-radius: 20px;
-				-o-border-radius: 20px;
-				border-radius : 20px;
-				text-align: center;
-			}
-			iframe {
-				display: block;
-				margin: auto;
-			}
+            .présentation img{
+                width: 8vw;
+                height: auto;
+                align-self: center;
+            }
+            .présentation p{
+                font-size: 2vw;
+                max-width: 12vw;
+                text-align: center;
+            }
+            .présentation div{
+                display: flex;
+                flex-direction: column;
+            }
+            #pré_title{
+                padding-top: 2vw; 
+                font-size: 3vw;
+                padding-left: 3%;
+            }
+            .connection {
+                margin-right: 10px;
+                margin-top: 1vw;
+                height: 5vw;
+            }
+            .connection input {
+                height: 2vw;
+                  width: 150px;
+                  font-size: 1vw;
+                  -webkit-border-radius: 1vw;
+                -moz-border-radius: 1vw;
+                -o-border-radius: 1vw;
+                border-radius : 1vw;
+                text-align: center;
+            }
+            iframe {
+                display: block;
+                margin: auto;
+            }
 
 		</style>
 	</head>
